# bruttan

./: .gitignore  Cargo.toml  README.md  api.yaml  compose.yml  flake.nix
bruttan-frontend/: api.yaml  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
bruttan-frontend/src/: App.tsx  main.tsx
bruttan-frontend/src/api/: v1.d.ts
bruttan-frontend/src/api/default/: default.faker.ts  default.msw.ts  default.ts
bruttan-frontend/src/api/model/: hejsan.ts  index.ts
bruttan-frontend/src/api/mutator/: custom-fetch.ts
migrations/: 20250510161531_initial_migration.sql  20250517085542_swish_model.sql  20260526213245_basic_models.sql
src/: main.rs
src/chapter_event/: handlers.rs  mod.rs  model.rs
src/models/: mod.rs  swish_payment_request_model.rs
src/routes/: mod.rs  swish_route.rs
src/services/: mod.rs
