[package]
name = "bruttan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json", "native-tls"] }
# reqwest = { version = "0.12.15", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["derive", "macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.45.0", features = ["full", "macros", "rt-multi-thread"] }
