[package]
name = "bruttan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
# axum = { version = "0.8.4", features = ["macros", "multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
poem-openapi = "5.1.16"
reqwest = { version = "0.12.15", features = ["json", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["derive", "macros", "postgres", "runtime-tokio", "sqlite", "time", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
